Fixed the homepage to have React bootstrap button that leads user to create a profile. Made css changes to align button with welcome message.

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -66,10 +66,11 @@ h3 {
 
 .vertical-aligner {
     max-width: 50%;
+    margin-left: 20px;
 }
 
 .home-styles{
-    margin-left: 20px;
+    padding-bottom: 15px;
     text-align: left !important;
     color: #1F1F1F;
     font-size: 40px;
